docs/6.4/faq.md
# Frequently Asked Questions

&nbsp;

**What platforms does Vinyl support?**

Everything apart from HTML5. You might run into edge cases on platforms that I don't regularly test; please [report any bugs](https://github.com/JujuAdams/Vinyl/issues) if and when you find them.

Live updating is only supported when running your game from the IDE on the same machine that built the game. Maybe in the future this'll change.

&nbsp;

**What versions of GameMaker does Vinyl support?**

Version 6 of Vinyl primarily supports GameMaker 2024.4, and in theory supports every version of GameMaker later than that. Later versions of GameMaker may change functionality in a way that Vinyl is not forwards-compatible with, but Vinyl uses only native GameMaker audio functions so is in the best possible position for long-term compatibility.

&nbsp;

**Does this library support GMRT / "new runtime"?**

No, GMRT is not supported by this library.

&nbsp;

**How is Vinyl licensed? Can I use it for commercial projects?**

[Vinyl is released under the MIT license](https://github.com/JujuAdams/Vinyl/blob/master/LICENSE). This means you can use it for whatever purpose you want, including commercial projects. It'd mean a lot to me if you'd drop my name in the credits (Juju Adams) and/or say thanks, but you're under no obligation to do so.

&nbsp;

**Do I *really* need source control to use Vinyl?**

No, but don't be surprised if you regret it.

&nbsp;

**I think you're missing a useful feature and I'd like you to implement it!**

Great! Please make a [feature request](https://github.com/JujuAdams/Vinyl/issues). Feature requests make Vinyl a more fun tool to use and gives me something to think about when I'm bored on public transport.

&nbsp;

**I found a bug, and it both scares and mildly annoys me. What is the best way to get the problem solved?**

Please make a [bug report](https://github.com/JujuAdams/Vinyl/issues). I check GitHub every day and bug fixes usually go out a couple days after that.

&nbsp;

**Who made Vinyl?**

Vinyl is built and maintained by [Juju](https://www.jujuadams.com/) who has been writing and rewriting audio systems for a long time. I've worked on a lot of [commercial GameMaker games](http://www.jujuadams.com/) over the years. Vinyl is the product of practical experience working as a consultant.

&nbsp;

**Has AI been used to make this library?**

This library was made with human hands. No generative AI models have been used to make this library.

&nbsp;

**Can I send you donations? Are you going to start a Patreon?**

Thank you for wanting to show your appreciation - it really does mean a lot to me personally - but I'm fortunate enough to have a stable income from gamedev. I'm not looking to join Patreon as a creator at this moment in time. If you'd like to support my work then drop a credit in your game and/or give a shout-out on the social media platform of your choice.

&nbsp; 

**How do I credit you in my game?**

You may credit me as "Juju Adams" or "JUJU ADAMS", whichever is most appropriate for your game, in any Latin font. My MobyGames account is [here](https://www.mobygames.com/person/918360/). You may **not** use my social media avatar (from Discord or other social media) for any purpose and you should only use my name for a credit.
